--- a/android/build.gradle
+++ b/android/build.gradle
@@ -39,5 +39,5 @@ repositories {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     api 'com.microsoft.aad:adal:1.12.0'
-    api project(':ReactAndroid')
+    api "com.facebook.react:react-native:+"
 }
